added sort reduce